# trontrace

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  start.sh
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  api.py  config.py  db.py  expansion.py  main.py  pipeline.py  store.py  trongrid.py  worker.py
backend/app/analysis/: __init__.py  classify.py  cluster.py  consistency.py  counterparties.py  expansion_signals.py  monthly.py  similarity.py
backend/tests/: conftest.py  scheme_fixture.py  test_api.py  test_cluster.py  test_consistency.py  test_counterparties.py  test_expansion.py  test_expansion_signals.py  test_monthly.py  test_pipeline.py  test_recipient_gate.py  test_similarity.py  test_store.py  test_trongrid.py  test_worker.py
docs/: design-spec.md
docs/superpowers/plans/: 2026-06-28-consistent-amount-ranking.md  2026-06-28-entity-expansion.md
docs/superpowers/specs/: 2026-06-28-consistent-amount-ranking-design.md  2026-06-28-entity-expansion-design.md
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts
frontend/src/components/: WalletDetail.tsx
frontend/src/pages/: Cohort.tsx  Consistent.tsx  Graph.tsx  MonthlyTable.tsx  Overview.tsx  Start.tsx
